...
                                    <outlet property="dataSource" destination="uuB-Dq-k1Z" id="vmM-8r-eLb"/>
                                    <outlet property="delegate" destination="uuB-Dq-k1Z" id="Fad-EN-LZw"/>
                                </connections>
                            </tableView>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter Zip" textAlignment="natural" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="Snr-Ws-x41">
                                <rect key="frame" x="164" y="92" width="115" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="enterZipTextField"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="115" id="YXL-cl-fYF"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                                <connections>
...
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8Z9-kr-FFV">
                                <rect key="frame" x="300" y="92" width="48" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="searchButton"/>
                                <state key="normal" title="Search"/>
                                <connections>
                                    <action selector="searchButtonTapped:" destination="uuB-Dq-k1Z" eventType="touchUpInside" id="w56-yw-ecR"/>
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Add Zip Code:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pqE-px-fLi">
...
