...
@end

@implementation WeatherDetailViewController

- (void)viewDidLoad {
    [super viewDidLoad];
    self.title = @"Weather Detail";
}

- (void)viewWillAppear:(BOOL)animated {
    [super viewWillAppear:animated];
    [UIImage loadFromURLString:[self.weatherData.weatherIconUrl weatherIconUrlString] callback:^(UIImage *image) {
        
...
