...

@implementation EnterZipCodeViewController

- (void)viewDidLoad {
    [super viewDidLoad];
    
    self.title = @"Weather Search";
    self.zipCodeList.dataSource = self;
    self.zipCodeList.delegate = self;
    
    [WeatherManager sharedManager].delegate = self;
    self.enterZipCodeTextField.delegate = self;
    
...
